--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -162,8 +162,10 @@ items:
     items:
     - name: Kontinuerlig distribution
       href: functions-continuous-deployment.md
-    - name: Zippa push-distribution
+    - name: Distribuera ZIP-filer
       href: deployment-zip-push.md
+    - name: Kör från paketet
+      href: run-functions-from-deployment-package.md
     - name: Automatisera resursdistribution
       href: functions-infrastructure-as-code.md
     - name: Lokala funktioner
@@ -278,9 +280,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/en-us/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 3eb52c481185c50d935991b5163d130925bd6eeb
-ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.openlocfilehash: 226f7630326f5123fde3da79e54196610186e562
+ms.sourcegitcommit: ebb460ed4f1331feb56052ea84509c2d5e9bd65c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/14/2018
-ms.locfileid: "41928061"
+ms.lasthandoff: 08/24/2018
+ms.locfileid: "42914895"
