--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -290,22 +290,22 @@ items:
     href: https://aka.ms/azure-powershell-cognitiveservices
   - name: SDK:er
     items:
+    - name: .NET-redigering
+      href: https://aka.ms/luis-sdk-dotnet-authoring
+    - name: .NET-körning
+      href: https://aka.ms/luis-sdk-dotnet-runtime
     - name: Android
       href: https://github.com/Microsoft/Cognitive-LUIS-Android
-    - name: Node.js-redigering
-      href: http://aka.ms/luis-sdk-node-authoring
-    - name: Node.js-slutpunkt
-      href: http://aka.ms/luis-sdk-node-endpoint
     - name: Go
       href: https://aka.ms/luis-sdk-go
     - name: Java
       href: https://aka.ms/luis-java-sdk
+    - name: Node.js-redigering
+      href: http://aka.ms/luis-sdk-node-authoring
+    - name: Node.js-körning
+      href: http://aka.ms/luis-sdk-node-endpoint
     - name: Python
       href: https://aka.ms/luis-python-sdk
-    - name: .Net-slutpunkt
-      href: https://aka.ms/luis-endpoint-sdk
-    - name: .Net-redigering
-      href: https://aka.ms/luis-authoring-sdk
 - name: Relaterat
   items:
   - name: Azure Bot Service
@@ -346,9 +346,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: c7bf2aa43abdfc69a07618afd1f028918374ea86
-ms.sourcegitcommit: fab878ff9aaf4efb3eaff6b7656184b0bafba13b
+ms.openlocfilehash: 3499c5a00b5b4ea4758a7895e44beceeed09973d
+ms.sourcegitcommit: ebb460ed4f1331feb56052ea84509c2d5e9bd65c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/22/2018
-ms.locfileid: "42440359"
+ms.lasthandoff: 08/24/2018
+ms.locfileid: "42915872"
