--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -40,22 +40,35 @@ items:
     - name: Vilande datakryptering
       href: azure-security-encryption-atrest.md
     - name: Diskkryptering för virtuella IaaS-datorer
-      href: azure-security-disk-encryption-overview.md
       items:
-      - name: Krav för diskkryptering
-        href: azure-security-disk-encryption-prerequisites.md
-      - name: Diskkryptering för virtuella Windows-datorer
-        href: azure-security-disk-encryption-windows.md
-      - name: Diskkryptering för virtuella Linux-datorer
-        href: azure-security-disk-encryption-linux.md
+      - name: Om Azure Disk Encryption
+        href: azure-security-disk-encryption-overview.md
+      - name: Snabbstarter
+        items:
+        - name: Kryptera virtuell dator – Azure PowerShell
+          href: quick-encrypt-vm-powershell.md
+      - name: Azure Disk Encryption
+        items:
+        - name: Krav för diskkryptering
+          href: azure-security-disk-encryption-prerequisites.md
+        - name: Diskkryptering för virtuella Windows-datorer
+          href: azure-security-disk-encryption-windows.md
+        - name: Diskkryptering för virtuella Linux-datorer
+          href: azure-security-disk-encryption-linux.md
       - name: Bilaga för diskkryptering
         href: azure-security-disk-encryption-appendix.md
       - name: Vanliga frågor och svar om diskkryptering
         href: azure-security-disk-encryption-faq.md
       - name: Felsökning
         href: azure-security-disk-encryption-tsg.md
-    - name: Kryptera en virtuell Azure-dator
-      href: ../security-center/security-center-disk-encryption.md?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json
+      - name: Azure Disk Encryption med Azure AD-appen (tidigare version)
+        items:
+        - name: Förutsättningar för diskkryptering med Azure AD-appen
+          href: azure-security-disk-encryption-prerequisites-aad.md
+        - name: Diskkryptering med Azure AD-appen för virtuella Windows-datorer
+          href: azure-security-disk-encryption-windows-aad.md
+        - name: Diskkryptering med Azure AD-appen för virtuella Linux-datorer
+          href: azure-security-disk-encryption-linux-aad.md
   - name: Azure Storage-säkerhet
     href: security-storage-overview.md
   - name: Lagringssäkerhetsguide
@@ -303,9 +316,9 @@ items:
         href: azure-security-threat-modeling-tool-sensitive-data.md
       - name: Sessionshantering
         href: azure-security-threat-modeling-tool-session-management.md
-ms.openlocfilehash: 0ec99adbb53dda738eeaa3edb5bd181b8a91c0e7
-ms.sourcegitcommit: 8ebcecb837bbfb989728e4667d74e42f7a3a9352
+ms.openlocfilehash: cb321a012d89f87022d66f50c3bc8fdcc921d6d6
+ms.sourcegitcommit: f1e6e61807634bce56a64c00447bf819438db1b8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/21/2018
-ms.locfileid: "41929249"
+ms.lasthandoff: 08/24/2018
+ms.locfileid: "42887841"
