--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -1,24 +1,22 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 4b7fd390b309500c6d3937fd07dac53d968b4b71
-ms.sourcegitcommit: 76797c962fa04d8af9a7b9153eaa042cf74b2699
+ms.openlocfilehash: 9f537ee8fe646a024fb191901b3669b4b5d60d6b
+ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/21/2018
-ms.locfileid: "41928084"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43086677"
 documentType: LandingData
 title: Ansible i Azure-dokumentation
 metadata:
   title: Ansible i Azure-dokumentation – självstudier, exempel, referenser och resurser
-  meta.description: Learn how to use Ansible to automate cloud provisioning, configuration management, and application deployments.
-  services: terraform
-  author: tomarcher
-  manager: routlaw
+  description: Lär dig använda Ansible för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
   ms.service: ansible
-  ms.tgt_pltfrm: na
-  ms.devlang: devops
-  ms.topic: landing-page
-  ms.date: 08/15/2018
+  keywords: ansible, azure, devops, tutorials, samples, reference
+  author: tomarcher
+  manager: jeconnoc
   ms.author: tarcher
+  ms.topic: landing-page
+  ms.date: 08/27/2018
 abstract:
   description: Använd <a href="http://www.ansible.com">Ansible</a> för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
 sections:
