--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -102,6 +102,8 @@ items:
       href: api-management-howto-integrate-internal-vnet-appgateway.md
     - name: Ömsesidig certifikatautentisering
       href: api-management-howto-mutual-certificates.md
+    - name: Hantera CA-certifikat
+      href: api-management-howto-ca-certificates.md
     - name: Hantera protokoll och chiffer
       href: api-management-howto-manage-protocols-ciphers.md
   - name: Anpassa utvecklarupplevelsen
@@ -230,9 +232,9 @@ items:
     href: http://aka.ms/apimblog
   - name: Funktionsbegäranden
     href: http://aka.ms/apimwish
-ms.openlocfilehash: af48b2fa60bd7c26db79d08c678004667fd67064
-ms.sourcegitcommit: 76797c962fa04d8af9a7b9153eaa042cf74b2699
+ms.openlocfilehash: cb3b3579eea9bbac5bb8d7a04977ae7b8aef45c1
+ms.sourcegitcommit: 161d268ae63c7ace3082fc4fad732af61c55c949
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/21/2018
-ms.locfileid: "41927387"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43039355"
