--- a/articles/chef/index.yml
+++ b/articles/chef/index.yml
@@ -1,24 +1,22 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 97bdd968297b301218891ce9ff1c98e5e894d5e9
+ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43108483"
 documentType: LandingData
 title: Chef Software i Azure-dokumentationen
 metadata:
   title: Chef Software i Azure-dokumentationen – självstudier, exempel, referens och resurser
-  meta.description: Chef Software provides a DevOps automation platform for Linux and Windows that enables the management of both physical and virtual server configurations. Learn how to use Chef Software products to automate infrastructure as code (IaC) recipes and manage and deploy virtual machines on Azure with quickstarts and tutorials.
-  services: chef
+  description: Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.
+  ms.service: chef
+  keywords: chef, azure, devops, tutorials, samples, reference
   author: tomarcher
   manager: jeconnoc
-  ms.service: chef
-  ms.tgt_pltfrm: na
-  ms.devlang: devops
-  ms.topic: landing page
-  ms.date: 05/15/2018
   ms.author: tarcher
-  ms.openlocfilehash: 644b50455ac4e7e7aba818ae31f95c736ae5d632
-  ms.sourcegitcommit: 96089449d17548263691d40e4f1e8f9557561197
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/17/2018
-  ms.locfileid: "34259195"
+  ms.topic: landing page
+  ms.date: 08/27/2018
 abstract:
   description: Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.
   aside:
