--- a/articles/jenkins/index.yml
+++ b/articles/jenkins/index.yml
@@ -1,30 +1,27 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 6502db6c9f19799298e4442a5b0e29e1d09b1a63
+ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43086538"
 documentType: LandingData
 title: Jenkins på Azure
 metadata:
+  title: Jenkins i Azure-dokumentation – självstudier, exempel, referenser och resurser
   description: Distribuera och integrera Jenkins med Azure
-  services: multiple
-  author: rloutlaw
-  manager: justhe
-  layout: LandingPage
-  ms.service: multiple
-  ms.tgt_pltfrm: na
-  ms.devlang: devops
+  ms.service: jenkins
+  keywords: jenkins, azure, devops, självstudier, exempel, referenser
+  author: tomarcher
+  manager: jeconnoc
+  ms.author: tarcher
   ms.topic: landing-page
-  ms.date: 11/01/2017
-  ms.author: routlaw
-  ms.custom: Jenkins
-  ms.openlocfilehash: 0925fb5cda7bdfde1a97d0725bd23a8f79882366
-  ms.sourcegitcommit: ce934aca02072bdd2ec8d01dcbdca39134436359
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/08/2017
-  ms.locfileid: "24052165"
+  ms.date: 08/27/2018
 abstract:
   description: Använd Jenkins-servern med öppen källkod för att skapa dina appar i molnet och distribuera dem till Azure. Lär dig hur du installerar, konfigurerar och skalar Jenkins på Azure samt konfigurerar kontinuerlig integrering (CI) för dina appar med våra snabbstarter, självstudier och exempel på pipeliner.
   aside:
     image:
-      alt: Jenkins logo
+      alt: Jenkins-logotyp
       height: 133
       width: 110
       src: media/Jenkins.png
