--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -142,16 +142,16 @@ items:
       href: memory-and-concurrency-limits.md
   - name: Hantering och övervakning
     items:
-    - name: Frågeaktivitet och resursutnyttjande
-      href: sql-data-warehouse-manage-monitor.md
+    - name: Skala, pausa och återuppta
+      href: sql-data-warehouse-manage-compute-overview.md
+    - name: Resursutnyttjande och frågeaktivitet
+      href: sql-data-warehouse-concept-resource-utilization-query-activity.md
     - name: Dataskydd
       href: backup-and-restore.md
-    - name: Skala ut, pausa och återuppta
-      href: sql-data-warehouse-manage-compute-overview.md
-    - name: Underhållsschema
-      href: service-maintenance.md
     - name: Rekommendationer
       href: sql-data-warehouse-concept-recommendations.md
+    - name: Underhållsschema
+      href: service-maintenance.md
     - name: Felsöka
       href: sql-data-warehouse-troubleshoot.md
   - name: Integrering
@@ -212,13 +212,15 @@ items:
       href: analyze-your-workload.md
   - name: Övervaka och finjustera
     items:
+    - name: Övervaka din arbetsbelastning
+      href: sql-data-warehouse-manage-monitor.md
     - name: Återställa – Portal
       href: sql-data-warehouse-restore-database-portal.md
     - name: Återställa – PowerShell
       href: sql-data-warehouse-restore-database-powershell.md
     - name: Återställa – REST API
       href: sql-data-warehouse-restore-database-rest-api.md
-    - name: Uppgradera till Gen2
+    - name: Uppgradera Gen1-informationslagret
       href: upgrade-to-latest-generation.md
     - name: Automatisera prestandanivåer
       href: manage-compute-with-azure-functions.md
@@ -276,9 +278,9 @@ items:
       href: sql-data-warehouse-partner-data-integration.md
     - name: Datahantering
       href: sql-data-warehouse-partner-data-management.md
-ms.openlocfilehash: bdda7231ea4703b33c8547e493cbd47b68cf9aab
-ms.sourcegitcommit: ebb460ed4f1331feb56052ea84509c2d5e9bd65c
+ms.openlocfilehash: 690faddea704b45f5fcba8079b03a8105b83a649
+ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/24/2018
-ms.locfileid: "42915133"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43106753"
