--- a/articles/expressroute/index.yml
+++ b/articles/expressroute/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 1f6448dc4cf31b3bb7597979587e1854a4878d50
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43190020"
 documentType: LandingData
 title: ExpressRoute dokumentation
 metadata:
@@ -13,12 +19,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/18/2018
   ms.author: cherylmc
-  ms.openlocfilehash: d46854679e8f802e7c3d66daf5b48d2f38a2e0dc
-  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/01/2018
-  ms.locfileid: "34648519"
 abstract:
   description: Lär dig hur du använder ExpressRoute för att konfigurera en snabb, privat anslutning till Microsoft Cloud-tjänster från din infrastruktur på plats eller delade miljö. Självstudier, REST API:er och annan dokumentation hjälper dig att konfigurera och hantera en ExpressRoute-krets.
 sections:
@@ -39,16 +39,16 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Implementera Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
+    - title: Azure-administratör
+      href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
-    - title: Planering och design av lösningar för Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012827
+    - title: Azure-lösningsarkitekt
+      href: https://go.microsoft.com/fwlink/?linkid=2012824
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012824
 - title: Referens
   items:
   - type: list
