--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -1,9 +1,15 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: f4e5a373c7c2388cd77debc6a83759c2d0ef8d48
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43189945"
 documentType: LandingData
-title: Load Balancer
+title: Lastbalanserare
 metadata:
   document_id: 
-  title: Load Balancer
+  title: Lastbalanserare
   meta.description: Learn how to use Azure Load Balancer. Quickstarts, tutorials, samples, and more, show you how to deploy a load balancer and load balance traffic to and from virtual machines and cloud resources, and in cross-premises virtual networks.
   services: load-balancer
   author: KumudD
@@ -14,19 +20,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/19/2018
   ms.author: kumud
-  ms.openlocfilehash: 497dc23f56e3dd75c6d7e0549fbdef42ff3c3698
-  ms.sourcegitcommit: 5892c4e1fe65282929230abadf617c0be8953fd9
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/29/2018
-  ms.locfileid: "37132627"
 abstract:
-  description: Lär dig hur du använder Azure Load Balancer. Snabbstarter, självstudier, exempel med mera som visar hur du distribuerar en belastningsutjämnare och belastningsutjämnar trafik till och från virtuella datorer och molnresurser och mellan lokala virtuella nätverk på plats.
+  description: Lär dig hur du använder Azure Load Balancer. Snabbstarter, självstudier, exempel med mera som visar hur du distribuerar en lastbalanserare och lastbalanserar trafik till och från virtuella datorer och molnresurser och mellan lokala virtuella nätverk på plats.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: Lär dig hur du skapar en belastningsutjämnare, skapar virtuella datorer som fungerar som serverdelar, installerar ett anpassat webbprogram på en virtuell dator och sedan belastningsutjämnar webbprogrammet mellan de virtuella datorerna.
+    text: Lär dig hur du skapar en lastbalanserare, skapar virtuella datorer som fungerar som serverdelar, installerar ett anpassat webbprogram på en virtuell dator och sedan lastbalanserar webbprogrammet mellan de virtuella datorerna.
   - type: list
     style: icon48
     items:
@@ -45,7 +45,7 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du skapar en belastningsutjämnare och belastningsutjämnar tjänster på virtuella datorer.
+    text: Lär dig hur du skapar en lastbalanserare och lastbalanserar tjänster på virtuella datorer.
   - type: list
     style: unordered
     items:
@@ -60,17 +60,17 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Implementera Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
+    - title: Azure-administratör
+      href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
-    - title: Planering och design av lösningar för Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012827
+    - title: Azure-lösningsarkitekt
+      href: https://go.microsoft.com/fwlink/?linkid=2012824
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
-    - title: Microsoft Azure-administration för AWS-administratörer
+        href: https://go.microsoft.com/fwlink/?linkid=2012824
+    - title: Azure-administration för AWS-administratörer
       href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
