--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -72,16 +72,18 @@ items:
       items:
       - name: Vanliga frågor om replikering från VMware till Azure
         href: vmware-azure-common-questions.md
-      - name: Supportmatris för VMware/fysisk till Azure
+      - name: Stödmatris
         href: vmware-physical-azure-support-matrix.md
       - name: Arkitektur för VMware till Azure
         href: vmware-azure-architecture.md
       - name: Arkitektur för fysisk till Azure
         href: physical-azure-architecture.md
-      - name: Stöd för flera klienter för VMware-replikering till Azure
-        href: vmware-azure-multi-tenant-overview.md
-      - name: Alternativ för redundansplats
+      - name: Om haveriberedskap
+        href: vmware-azure-about-disaster-recovery.md
+      - name: Om alternativ för redundansplats
         href: concepts-types-of-failback.md
+      - name: Om stöd för flera klienter för VMware
+        href: vmware-azure-multi-tenant-overview.md
     - name: Replikering till en sekundär plats
       items:
       - name: Stödmatris för VMware/fysisk till sekundär plats
@@ -388,9 +390,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: f0469d554b25565411bb8c484f3d3937bb9a87f6
-ms.sourcegitcommit: 2ad510772e28f5eddd15ba265746c368356244ae
+ms.openlocfilehash: 63d404406e3b33d4022974246a227cad1e6535a6
+ms.sourcegitcommit: f94f84b870035140722e70cab29562e7990d35a3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/28/2018
-ms.locfileid: "43126078"
+ms.lasthandoff: 08/30/2018
+ms.locfileid: "43285114"
