--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -231,9 +231,11 @@ items:
       href: metrics-vm-usage-rest.md
   - name: Hantera kostnader
     items:
-    - name: Förskottsbetala för virtuella datorer – Azure-reservationer
+    - name: Förskottsbetala för virtuella datorer – Azure Reservations
       href: prepay-reserved-vm-instances.md
-    - name: Vad är Azure-reservationer?
+    - name: Förskottsbetala för SUSE-programvara
+      href: prepay-suse-software-charges.md
+    - name: Vad är Azure Reservations?
       href: ../../billing/billing-save-compute-costs-reservations.md
     - name: Flexibilitet för VM-instansstorlek
       href: reserved-vm-instance-size-flexibility.md
@@ -549,9 +551,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: e79b9fb8611abbfb1d5d722760b4072835980100
-ms.sourcegitcommit: f1e6e61807634bce56a64c00447bf819438db1b8
+ms.openlocfilehash: 10eeab7d30e245a32ea166b26b173cd78f19a7b8
+ms.sourcegitcommit: 1fb353cfca800e741678b200f23af6f31bd03e87
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/24/2018
-ms.locfileid: "42884893"
+ms.lasthandoff: 08/30/2018
+ms.locfileid: "43300900"
