--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -39,6 +39,8 @@ items:
     href: key-vault-ovw-storage-keys.md
   - name: Begränsning
     href: key-vault-ovw-throttling.md
+  - name: Slutpunkter för virtuellt nätverk
+    href: key-vault-overview-vnet-service-endpoints.md
   - name: Om nycklar, hemligheter och certifikat
     href: about-keys-secrets-and-certificates.md
     items:
@@ -68,6 +70,8 @@ items:
     href: key-vault-group-permissions-for-apps.md
   - name: Säkra ditt nyckelvalv
     href: key-vault-secure-your-key-vault.md
+  - name: Konfigurera brandväggar och virtuella nätverk
+    href: key-vault-network-security.md
 - name: Referens
   items:
   - name: Azure PowerShell
@@ -128,9 +132,9 @@ items:
     href: https://feedback.azure.com/forums/906355-azure-key-vault
 - name: Viktig information
   href: key-vault-versions.md
-ms.openlocfilehash: c6ddd725ce9a1c11c4e5ca6515c31ab8616b2bbf
-ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
+ms.openlocfilehash: cd88b2ce876e462140f9d25833678e2f3b7f7805
+ms.sourcegitcommit: 0c64460a345c89a6b579b1d7e273435a5ab4157a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/27/2018
-ms.locfileid: "43090453"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43340021"
