--- a/articles/monitoring-and-diagnostics/toc.yml
+++ b/articles/monitoring-and-diagnostics/toc.yml
@@ -1,216 +1,225 @@
+items:
 - name: Dokumentation om Azure Monitor
   href: index.yml
 - name: Översikt
   items:
-    - name: Övervakning i Azure
-      href: monitoring-overview.md
+  - name: Övervakning i Azure
+    href: monitoring-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Avisera (klassisk) om måttvillkor
-      href: monitor-quick-resource-metric-alert-portal.md
-    - name: Avisera om prenumerationsaktivitet
-      href: monitor-quick-audit-notify-action-in-subscription.md
+  - name: Avisera (klassisk) om måttvillkor
+    href: monitor-quick-resource-metric-alert-portal.md
+  - name: Avisera om prenumerationsaktivitet
+    href: monitor-quick-audit-notify-action-in-subscription.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Skala automatiskt enligt prestanda och schema
-      href: monitor-tutorial-autoscale-performance-schedule.md
-    - name: Arkivera övervakningsdata
-      href: monitor-tutorial-archive-monitoring-data.md
+  - name: Skala automatiskt enligt prestanda och schema
+    href: monitor-tutorial-autoscale-performance-schedule.md
+  - name: Arkivera övervakningsdata
+    href: monitor-tutorial-archive-monitoring-data.md
 - name: Begrepp
   items:
-    - name: Källor för övervakningsdata
-      href: monitoring-data-sources.md
-    - name: Azure Monitor
-      href: monitoring-overview-azure-monitor.md
-    - name: Agenter
-      href: ../monitoring/monitoring-overview-azure-agents.md
-    - name: Mått
-      href: monitoring-overview-metrics.md
-    - name: Automatisk skalning
-      href: monitoring-overview-autoscale.md
-    - name: Diagnostikloggar
-      href: monitoring-overview-of-diagnostic-logs.md
-    - name: Aktivitetslogg
-      href: monitoring-overview-activity-logs.md
-    - name: Aviseringar
-      href: monitoring-overview-unified-alerts.md
-    - name: Aviseringar (klassiska)
-      href: monitoring-overview-alerts.md
-    - name: Loggaviseringar
-      href: monitor-alerts-unified-log.md
-    - name: Aktivitetsloggaviseringar (förhandsversion)
-      href: monitoring-activity-log-alerts-new-experience.md
-    - name: Utöka aviseringar från Log Analytics till Azure
-      href: monitoring-alerts-extend.md
-    - name: Åtgärdsgrupper
-      href: monitoring-action-groups.md
-    - name: Azure Diagnostics-tillägg
-      href: azure-diagnostics.md
-    - name: Rollbehörigheter och säkerhet
-      href: monitoring-roles-permissions-security.md
-    - name: Partnerintegrering
-      href: monitoring-partners.md
+  - name: Källor för övervakningsdata
+    href: monitoring-data-sources.md
+  - name: Azure Monitor
+    href: monitoring-overview-azure-monitor.md
+  - name: Agenter
+    href: ../monitoring/monitoring-overview-azure-agents.md
+  - name: Mått
+    href: monitoring-overview-metrics.md
+  - name: Automatisk skalning
+    href: monitoring-overview-autoscale.md
+  - name: Diagnostikloggar
+    href: monitoring-overview-of-diagnostic-logs.md
+  - name: Aktivitetslogg
+    href: monitoring-overview-activity-logs.md
+  - name: Aviseringar
+    href: monitoring-overview-unified-alerts.md
+  - name: Aviseringar (klassiska)
+    href: monitoring-overview-alerts.md
+  - name: Loggaviseringar
+    href: monitor-alerts-unified-log.md
+  - name: Aktivitetsloggaviseringar (förhandsversion)
+    href: monitoring-activity-log-alerts-new-experience.md
+  - name: Utöka aviseringar från Log Analytics till Azure
+    href: monitoring-alerts-extend.md
+  - name: Åtgärdsgrupper
+    href: monitoring-action-groups.md
+  - name: Azure Diagnostics-tillägg
+    href: azure-diagnostics.md
+  - name: Insikter om resursgrupper
+    href: resource-group-insights.md
+  - name: Rollbehörigheter och säkerhet
+    href: monitoring-roles-permissions-security.md
+  - name: Partnerintegrering
+    href: monitoring-partners.md
 - name: Instruktionsguider
   items:
-    - name: Genomgång av Azure Monitor
-      href: monitoring-get-started.md
-    - name: Skapa måttdiagram i Metrics Explorer
-      href: monitoring-metric-charts.md
-    - name: Använda aviseringar
-      items:
-        - name: Konfigurera nya mått eller loggaviseringar i Azure Portal
-          href: monitor-alerts-unified-usage.md
-        - name: Konfigurera klassiska aviseringar i Azure Portal
-          href: insights-alerts-portal.md
-        - name: Konfigurera klassiska aviseringar med CLI
-          href: insights-alerts-command-line-interface.md
-        - name: Konfigurera klassiska aviseringar med Azure PowerShell
-          href: insights-alerts-powershell.md
-        - name: Få en klassisk måttavisering att anropa en webhook
-          href: insights-webhooks-alerts.md
-        - name: Webhook-åtgärder för loggaviseringar
-          href: monitor-alerts-unified-log-webhook.md
-        - name: Skapa en loggavisering med en Resource Manager-mall
-          href: monitor-alerts-unified-log-template.md
-        - name: Skapa en nyare måttavisering med en Resource Manager-mall
-          href: monitoring-create-metric-alerts-with-templates.md
-        - name: Skapa en klassisk måttavisering med en Resource Manager-mall
-          href: monitoring-enable-alerts-using-template.md
-        - name: Kopiera aviseringar från OMS-portalen till Azure Portal
-          href: monitoring-alerts-extend-tool.md
-        - name: Aviseringar med dynamiska tröskelvärden
-          href: monitoring-alerts-dynamic-thresholds.md
-    - name: Använda åtgärdsgrupper med aviseringar
-      items:
-        - name: Lär dig mer om webhook-schemat
-          href: monitoring-activity-log-alerts-webhook.md
-        - name: Beteende för SMS-aviseringar
-          href: monitoring-sms-alert-behavior.md
-        - name: Begränsningar för aviseringsfrekvensen
-          href: monitoring-alerts-rate-limiting.md
-        - name: Skapa åtgärdsgrupper med Resource Manager
-          href: monitoring-create-action-group-with-resource-manager-template.md
-        - name: Implementera en Logikapp-åtgärd
-          href: monitoring-action-groups-logic-app.md
-    - name: Använda diagnostikloggar
-      items:
-        - name: Arkiv
-          href: monitoring-archive-diagnostic-logs.md
-        - name: Skicka till Log Analytics
-          href: monitor-stream-diagnostic-logs-log-analytics.md
-        - name: Strömma till Event Hubs
-          href: monitoring-stream-diagnostic-logs-to-event-hubs.md
-        - name: Aktivera diagnostikinställningar med Resource Manager-mallar
-          href: monitoring-enable-diagnostic-logs-using-template.md
-        - name: Förbered för JSON Lines-format för diagnostikloggar
-          href: monitor-diagnostic-logs-append-blobs.md
-    - name: Använda aktivitetslogg
-      items:
-        - name: Visa händelser i aktivitetsloggen
-          href: ../azure-resource-manager/resource-group-audit.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
-        - name: Konfigurera aviseringar i en händelse i aktivitetsloggen
-          href: monitoring-activity-log-alerts.md
-        - name: Arkivera aktivitetsloggen
-          href: monitoring-archive-activity-log.md
-        - name: Strömma aktivitetsloggen till Event Hubs
-          href: monitoring-stream-activity-logs-event-hubs.md
-        - name: Granska åtgärder med Resource Manager
-          href: ../azure-resource-manager/resource-group-audit.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
-        - name: Skapa aviseringar för aktivitetsloggen med Resource Manager
-          href: monitoring-create-activity-log-alerts-with-resource-manager-template.md
-        - name: Migrera till aktivitetsloggsaviseringar
-          href: monitoring-migrate-management-alerts.md
-    - name: Använda tjänstmeddelanden
-      items:
-        - name: Visa tjänstmeddelanden
-          href: monitoring-service-notifications.md
-        - name: Konfigurera aviseringar för tjänstmeddelanden
-          href: monitoring-activity-log-alerts-on-service-notifications.md
-    - name: Programmässig åtkomst
-      items:
-        - name: Genomgång med REST API
-          href: monitoring-rest-api-walkthrough.md
-        - name: Azure PowerShell-exempel
-          href: insights-powershell-samples.md
-        - name: Azure CLI-exempel
-          href: insights-cli-samples.md
-    - name: Använd Azure Diagnostics-tillägg
-      items:
-        - name: Skicka till Azure Storage
-          href: azure-diagnostics-storage.md
-        - name: Skicka till Application Insights
-          href: azure-diagnostics-configure-application-insights.md
-        - name: Skicka till Event Hubs
-          href: azure-diagnostics-streaming-event-hubs.md
-        - name: Felsökning
-          href: azure-diagnostics-troubleshooting.md
-    - name: Använda automatisk skalning
-      items:
-        - name: Genomgång av automatisk skalning
-          href: monitoring-autoscale-get-started.md
-        - name: Förstå inställningarna för automatisk skalning
-          href: monitoring-understanding-autoscale-settings.md
-        - name: Bästa praxis
-          href: insights-autoscale-best-practices.md
-        - name: Vanliga mått
-          href: insights-autoscale-common-metrics.md
-        - name: Vanliga mönster
-          href: monitoring-autoscale-common-scale-patterns.md
-        - name: Skala automatiskt med anpassat mått
-          href: monitoring-autoscale-scale-by-custom-metric.md
-        - name: VM Scale Sets för automatisk skalning med Resource Manager-mallar
-          href: insights-advanced-autoscale-virtual-machine-scale-sets.md
-        - name: Skala datorer i en skalningsuppsättning för virtuella datorer automatiskt
-          href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
-        - name: Konfigurera webhooks och e-postaviseringar med automatisk skalning
-          href: insights-autoscale-to-webhook-email.md
-    - name: Dirigera till andra platser
-      items:
-        - name: Skicka mått till Grafana
-          href: monitor-send-to-grafana.md
-        - name: Skicka övervakningsdata till en händelsehubb
-          href: monitor-stream-monitoring-data-event-hubs.md
+  - name: Genomgång av Azure Monitor
+    href: monitoring-get-started.md
+  - name: Skapa måttdiagram i Metrics Explorer
+    href: monitoring-metric-charts.md
+  - name: Använda aviseringar
+    items:
+    - name: Konfigurera nya mått eller loggaviseringar i Azure Portal
+      href: monitor-alerts-unified-usage.md
+    - name: Konfigurera klassiska aviseringar i Azure Portal
+      href: insights-alerts-portal.md
+    - name: Konfigurera klassiska aviseringar med CLI
+      href: insights-alerts-command-line-interface.md
+    - name: Konfigurera klassiska aviseringar med Azure PowerShell
+      href: insights-alerts-powershell.md
+    - name: Få en klassisk måttavisering att anropa en webhook
+      href: insights-webhooks-alerts.md
+    - name: Webhook-åtgärder för loggaviseringar
+      href: monitor-alerts-unified-log-webhook.md
+    - name: Skapa en loggavisering med en Resource Manager-mall
+      href: monitor-alerts-unified-log-template.md
+    - name: Skapa en nyare måttavisering med en Resource Manager-mall
+      href: monitoring-create-metric-alerts-with-templates.md
+    - name: Skapa en klassisk måttavisering med en Resource Manager-mall
+      href: monitoring-enable-alerts-using-template.md
+    - name: Kopiera aviseringar från OMS-portalen till Azure Portal
+      href: monitoring-alerts-extend-tool.md
+    - name: Aviseringar med dynamiska tröskelvärden
+      href: monitoring-alerts-dynamic-thresholds.md
+  - name: Använda åtgärdsgrupper med aviseringar
+    items:
+    - name: Lär dig mer om webhook-schemat
+      href: monitoring-activity-log-alerts-webhook.md
+    - name: Beteende för SMS-aviseringar
+      href: monitoring-sms-alert-behavior.md
+    - name: Begränsningar för aviseringsfrekvensen
+      href: monitoring-alerts-rate-limiting.md
+    - name: Skapa åtgärdsgrupper med Resource Manager
+      href: monitoring-create-action-group-with-resource-manager-template.md
+    - name: Implementera en Logikapp-åtgärd
+      href: monitoring-action-groups-logic-app.md
+  - name: Använda diagnostikloggar
+    items:
+    - name: Arkiv
+      href: monitoring-archive-diagnostic-logs.md
+    - name: Skicka till Log Analytics
+      href: monitor-stream-diagnostic-logs-log-analytics.md
+    - name: Strömma till Event Hubs
+      href: monitoring-stream-diagnostic-logs-to-event-hubs.md
+    - name: Aktivera diagnostikinställningar med Resource Manager-mallar
+      href: monitoring-enable-diagnostic-logs-using-template.md
+    - name: Förbered för JSON Lines-format för diagnostikloggar
+      href: monitor-diagnostic-logs-append-blobs.md
+  - name: Använda aktivitetslogg
+    items:
+    - name: Visa händelser i aktivitetsloggen
+      href: ../azure-resource-manager/resource-group-audit.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
+    - name: Konfigurera aviseringar i en händelse i aktivitetsloggen
+      href: monitoring-activity-log-alerts.md
+    - name: Arkivera aktivitetsloggen
+      href: monitoring-archive-activity-log.md
+    - name: Strömma aktivitetsloggen till Event Hubs
+      href: monitoring-stream-activity-logs-event-hubs.md
+    - name: Granska åtgärder med Resource Manager
+      href: ../azure-resource-manager/resource-group-audit.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
+    - name: Skapa aviseringar för aktivitetsloggen med Resource Manager
+      href: monitoring-create-activity-log-alerts-with-resource-manager-template.md
+    - name: Migrera till aktivitetsloggsaviseringar
+      href: monitoring-migrate-management-alerts.md
+  - name: Använda tjänstmeddelanden
+    items:
+    - name: Visa tjänstmeddelanden
+      href: monitoring-service-notifications.md
+    - name: Konfigurera aviseringar för tjänstmeddelanden
+      href: monitoring-activity-log-alerts-on-service-notifications.md
+  - name: Programmässig åtkomst
+    items:
+    - name: Genomgång med REST API
+      href: monitoring-rest-api-walkthrough.md
+    - name: Azure PowerShell-exempel
+      href: insights-powershell-samples.md
+    - name: Azure CLI-exempel
+      href: insights-cli-samples.md
+  - name: Använd Azure Diagnostics-tillägg
+    items:
+    - name: Skicka till Azure Storage
+      href: azure-diagnostics-storage.md
+    - name: Skicka till Application Insights
+      href: azure-diagnostics-configure-application-insights.md
+    - name: Skicka till Event Hubs
+      href: azure-diagnostics-streaming-event-hubs.md
+    - name: Felsökning
+      href: azure-diagnostics-troubleshooting.md
+  - name: Använda automatisk skalning
+    items:
+    - name: Genomgång av automatisk skalning
+      href: monitoring-autoscale-get-started.md
+    - name: Förstå inställningarna för automatisk skalning
+      href: monitoring-understanding-autoscale-settings.md
+    - name: Bästa praxis
+      href: insights-autoscale-best-practices.md
+    - name: Vanliga mått
+      href: insights-autoscale-common-metrics.md
+    - name: Vanliga mönster
+      href: monitoring-autoscale-common-scale-patterns.md
+    - name: Skala automatiskt med anpassat mått
+      href: monitoring-autoscale-scale-by-custom-metric.md
+    - name: VM Scale Sets för automatisk skalning med Resource Manager-mallar
+      href: insights-advanced-autoscale-virtual-machine-scale-sets.md
+    - name: Skala datorer i en skalningsuppsättning för virtuella datorer automatiskt
+      href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
+    - name: Konfigurera webhooks och e-postaviseringar med automatisk skalning
+      href: insights-autoscale-to-webhook-email.md
+  - name: Dirigera till andra platser
+    items:
+    - name: Skicka mått till Grafana
+      href: monitor-send-to-grafana.md
+    - name: Skicka övervakningsdata till en händelsehubb
+      href: monitor-stream-monitoring-data-event-hubs.md
 - name: Referens
   items:
-    - name: Azure CLI
-      href: /cli/azure/monitor?view=azure-cli-latest
-    - name: Azure PowerShell
-      href: /powershell/module/azurerm.insights
-    - name: REST
-      href: /rest/api/monitor/
-    - name: Mått som stöds
-      href: monitoring-supported-metrics.md
-    - name: Mått som stöds för nyare aviseringar
-      href: monitoring-near-real-time-metric-alerts.md
-    - name: 'Tjänster, kategorier och scheman för diagnostikloggar'
-      href: monitoring-diagnostic-logs-schema.md
-    - name: Händelseschema för aktivitetslogg
-      href: monitoring-activity-log-schema.md
-    - name: Schema för Azure Diagnostics-tillägg
-      href: azure-diagnostics-schema.md
-      items:
-        - name: 1.3 och senare
-          href: azure-diagnostics-schema-1dot3-and-later.md
-        - name: 1.2
-          href: azure-diagnostics-schema-1dot2.md
-        - name: 1
-          href: azure-diagnostics-schema-1dot0.md
+  - name: Azure CLI
+    href: /cli/azure/monitor?view=azure-cli-latest
+  - name: Azure PowerShell
+    href: /powershell/module/azurerm.insights
+  - name: REST
+    href: /rest/api/monitor/
+  - name: Mått som stöds
+    href: monitoring-supported-metrics.md
+  - name: Mått som stöds för nyare aviseringar
+    href: monitoring-near-real-time-metric-alerts.md
+  - name: Tjänster, kategorier och scheman för diagnostikloggar
+    href: monitoring-diagnostic-logs-schema.md
+  - name: Händelseschema för aktivitetslogg
+    href: monitoring-activity-log-schema.md
+  - name: Schema för Azure Diagnostics-tillägg
+    href: azure-diagnostics-schema.md
+    items:
+    - name: 1.3 och senare
+      href: azure-diagnostics-schema-1dot3-and-later.md
+    - name: "1.2"
+      href: azure-diagnostics-schema-1dot2.md
+    - name: "1"
+      href: azure-diagnostics-schema-1dot0.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=monitoring-management'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=monitor'
-    - name: Snabbstartsmallar
-      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Insights'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=monitoring'
-    - name: Kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?service=monitor'
-    - name: Användning och uppskattade kostnader
-      href: monitoring-usage-and-estimated-costs.md
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=monitoring-management
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=monitor
+  - name: Snabbstartsmallar
+    href: https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Insights
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=monitoring
+  - name: Kodexempel
+    href: https://azure.microsoft.com/resources/samples/?service=monitor
+  - name: Användning och uppskattade kostnader
+    href: monitoring-usage-and-estimated-costs.md
+ms.openlocfilehash: 92b69fd2e3d299f88a3f08a42bfe4667bce59da0
+ms.sourcegitcommit: 0c64460a345c89a6b579b1d7e273435a5ab4157a
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43336567"
